--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Sam's Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h1>Sam's Portfolio</h1>
+        <ul>
+          <li>About Me</li>
+          <li>My Work</li>
+          <li>Contact Me</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
