--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Sam's Portfolio</title>
+    <title>Portfolio - Home</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <h1>Sam's Portfolio</h1>
-        <ul>
-          <li>About Me</li>
-          <li>My Work</li>
-          <li>Contact Me</li>
-        </ul>
-      </nav>
-    </header>
+    <nav>
+      <ul>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
   </body>
 </html>
