Huge first pass, mostly placeholder imgs and text, basic structure of the page has been built out, minimal css styling also applied to try and find a color scheme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Portfolio - Home</title>
@@ -11,10 +16,48 @@
   <body>
     <nav>
       <ul>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Contact</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <main>
+      <h1 id="landing-text">Hi There!</h1>
+      <section>
+        <h2>About Me</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
+          eveniet, consectetur temporibus voluptate numquam asperiores ullam,
+          rerum, consequuntur eius architecto maxime et minima eum
+          necessitatibus.
+        </p>
+      </section>
+      <section>
+        <h2>My Projects</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sint
+          sequi provident tempora accusantium quos. Fugit sed soluta beatae
+          reprehenderit.
+        </p>
+        <figure>
+          <img src="#" alt="Placeholder for project 1" />
+          <figcaption>My First Project!</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="Placeholder for project 2" />
+          <figcaption>My Second Project!</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="Placeholder for project 3" />
+          <figcaption>My Third Project!</figcaption>
+        </figure>
+      </section>
+      <section>
+        <h2>Contact Me</h2>
+        <a href="#">My Github</a>
+        <a href="#">Twitter</a>
+        <a href="#">Email</a>
+      </section>
+    </main>
   </body>
 </html>
