--- a/index.html
+++ b/index.html
@@ -23,22 +23,27 @@
     </nav>
     <main>
       <h1 id="landing-text">Hi There!</h1>
-      <section>
+      <div class="about-me">
         <h2>About Me</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
-          eveniet, consectetur temporibus voluptate numquam asperiores ullam,
-          rerum, consequuntur eius architecto maxime et minima eum
-          necessitatibus.
-        </p>
-      </section>
-      <section>
+        <div class="about-content">
+          <img src="#" alt="Placeholder img for about me section">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
+            eveniet, consectetur temporibus voluptate numquam asperiores ullam,
+            rerum, consequuntur eius architecto maxime et minima eum
+            necessitatibus.
+          </p>
+        </div>
+      </div>
+      <div class="my-projects">
         <h2>My Projects</h2>
+        <div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sint
           sequi provident tempora accusantium quos. Fugit sed soluta beatae
           reprehenderit.
         </p>
+        </div>
         <figure>
           <img src="#" alt="Placeholder for project 1" />
           <figcaption>My First Project!</figcaption>
@@ -51,8 +56,8 @@
           <img src="#" alt="Placeholder for project 3" />
           <figcaption>My Third Project!</figcaption>
         </figure>
-      </section>
-      <section>
+      </div>
+      <div class="contact-me">
         <h2>Contact Me</h2>
         <a href="#">My Github</a>
         <a href="#">Twitter</a>
