--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
       </ul>
     </nav>
     <main>
-      <h1 id="landing-text">Hi There!</h1>
+      <h1 id="landing-text">Hi! Welcome to my Portfolio!</h1>
       <div class="about-me">
         <h2>About Me</h2>
         <div class="about-content">
-          <img src="#" alt="Placeholder img for about me section">
+          <img src="./assets/imgs/about-me.jpg" alt="Placeholder img for about me section">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
-            eveniet, consectetur temporibus voluptate numquam asperiores ullam,
-            rerum, consequuntur eius architecto maxime et minima eum
-            necessitatibus.
+            My name is Samuel Brookshire. I'm a 21 year old full stack web developer in training.
           </p>
         </div>
       </div>
