--- a/index.html
+++ b/index.html
@@ -22,38 +22,62 @@
       </ul>
     </nav>
     <main>
-      <h1 id="landing-text">Hi! Welcome to my Portfolio!</h1>
+      <h1 id="landing-text">Hello and Welcome to my Portfolio!</h1>
       <div class="about-me">
         <h2>About Me</h2>
         <div class="about-content">
           <img src="./assets/imgs/about-me.jpg" alt="Placeholder img for about me section">
-          <p>
-            My name is Samuel Brookshire. I'm a 21 year old full stack web developer in training.
-          </p>
+          <div class="about-text">
+            <p>
+              My name is Samuel Brookshire. I'm a 21 year old full stack web developer in training. 
+              I took college courses for a few years as an aerospace engineering major before deciding 
+              that was not the route for me. I elected to take part in the Denver University Bootcamp 
+              to bring my passion for computer science to an accelerated program which would allow me to 
+              enter the job field quickly.
+            </p>
+            <p>
+              My experience in engineering lends itself to quick problem solving and creative thinking
+              to bring innovative solutions to the table. As a full stack developer, I bring fresh ideas
+              to all aspects of any project I work on. Despite my fresh entry to the field, I am ready, willing
+              and able to prove myself.
+            </p>
+            <p>
+              Thank you for taking the time to check out my portfolio, and I hope you like what you find!
+            </p>
+          </div>
         </div>
       </div>
+      <div class="transition-line"></div>
       <div class="my-projects">
         <h2>My Projects</h2>
-        <div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sint
-          sequi provident tempora accusantium quos. Fugit sed soluta beatae
-          reprehenderit.
-        </p>
+        <div class='row'>
+          <div class="big-card">
+            <figure>
+              <img src="#" alt="A large image showcasing my biggest project">
+              <figcaption>My Biggest Project Yet</figcaption>
+            </figure>
+          </div>
+          <div class="project-card">
+            <figure>
+              <img src="./assets/imgs/project-sample.jpg" alt="Placeholder for project 1" />
+              <figcaption>My First Project!</figcaption>
+            </figure>
+          </div>
+          <div class="project-card">
+            <figure>
+              <img src="./assets/imgs/project-sample.jpg" alt="Placeholder for project 2" />
+              <figcaption>My Second Project!</figcaption>
+            </figure>
+          </div>
+          <div class="project-card">
+            <figure>
+              <img src="./assets/imgs/project-sample.jpg" alt="Placeholder for project 3" />
+              <figcaption>My Third Project!</figcaption>
+            </figure>
+          </div>
         </div>
-        <figure>
-          <img src="#" alt="Placeholder for project 1" />
-          <figcaption>My First Project!</figcaption>
-        </figure>
-        <figure>
-          <img src="#" alt="Placeholder for project 2" />
-          <figcaption>My Second Project!</figcaption>
-        </figure>
-        <figure>
-          <img src="#" alt="Placeholder for project 3" />
-          <figcaption>My Third Project!</figcaption>
-        </figure>
       </div>
+      <div class="transition-line"></div>
       <div class="contact-me">
         <h2>Contact Me</h2>
         <a href="#">My Github</a>
